# routes/student_routes.go
@@ -9,27 +9,18 @@ import (
 func RegisterStudentRoutes(router *mux.Router) {
 	router.HandleFunc("/students", controllers.GetStudents).Methods("GET")
 	// router.HandleFunc("/students", controllers.CreateStudent).Methods("POST")
-	router.HandleFunc("/students/{id}", controllers.GetStudent).Methods("GET")
-	router.HandleFunc("/students/{id}", controllers.UpdateStudent).Methods("PUT")
-	router.HandleFunc("/students/{id}", controllers.DeleteStudent).Methods("DELETE")
+	router.HandleFunc("/students", controllers.GetStudent).Methods("GET")
+	router.HandleFunc("/students", controllers.UpdateStudent).Methods("PUT")
+	router.HandleFunc("/students", controllers.DeleteStudent).Methods("DELETE")
 
 	// Add attendance routes
 	router.HandleFunc("/attendance", controllers.PostAttendance).Methods("POST")
 
 	// Add mood routes
-	router.HandleFunc("/moods/{id}", controllers.GetMood).Methods("GET")
 	router.HandleFunc("/moods", controllers.CreateMood).Methods("POST")
 
 	// Add card routes
 	router.HandleFunc("/dashboard", controllers.GetStudentDetails).Methods("GET")
-
-	// RegisterRoutes sets up the routes for the AuthService
-
-	// Initialize AuthService
-	authService := controllers.NewAuthService()
-
-	// Register AuthService routes
-	authService.RegisterRoutes(router)
 
 	router.HandleFunc("/employees", controllers.GetEmployeeData).Methods("GET")
 
